--- a/package.json
+++ b/package.json
@@ -9,5 +9,12 @@
   "dependencies": {
     "axios": "^0.21.1",
     "moment": "^2.29.1"
-  }
+  },
+  "browserslist": [
+    "last 3 and_chr versions",
+    "last 3 chrome versions",
+    "last 3 opera versions",
+    "last 3 ios_saf versions",
+    "last 3 safari versions"
+  ]
 }
